--- a/app.css
+++ b/app.css
@@ -119,14 +119,16 @@
     padding: 0rem 0.75rem;
 }
 .propertyImage{
-    height: 31vw;
+    height: 40vw;
     width: 100%;
     text-align: center;
-    background-image: url(assets/banner-image1.png);
-    background-attachment: fixed;
+    background-image: url("assets/banner-image1.png");
+    background-repeat: no-repeat;
+    background-size: cover;*/
+/*    background-attachment: fixed;
     background-position: top;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: contain;*/
 }
 
 /*@media screen and (max-width: 768px){
@@ -140,8 +142,8 @@
 @media screen and (max-width: 565px){
     .propertyImage{
         height: 70vh;
-        background-size: cover;
-        background-image: url(assets/banner-mobile.png);
+        /*background-size: cover;*/
+        background-image: url("assets/banner-mobile.png");
     }
 
 }
